Fix: Update CORS configuration for Vercel